gen/AngularParser.java
// Generated from D:/Antlr/AngularCompiler2/src/AngularParser.g4 by ANTLR 4.13.2
package gen;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class AngularParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		IMPORT=1, FROM=2, EXPORT=3, CLASS=4, THIS=5, NEW=6, CHAR=7, STRING=8, 
		INT=9, FLOAT=10, ARRAY=11, ANY=12, FOR=13, FOREACH=14, OF=15, WHILE=16, 
		DO=17, IF=18, ELSE_IF=19, ELSE=20, TRUE=21, FALSE=22, LET=23, VAR=24, 
		CONST=25, NUM=26, NULL=27, BOOLEAN=28, OPENCURLY=29, CLOSECURLY=30, OPENBRACKET=31, 
		CLOSEBRACKET=32, OPENSQUARE=33, CLOSESQUARE=34, COLON=35, CEMMI=36, COMMA=37, 
		AT=38, DOT=39, ASSIGN=40, LEFTARROW=41, RIGHTARROW=42, LEFTARROWOREQUAL=43, 
		RIGHTARROWOREQUAL=44, EQUAL=45, NOTEQUAL=46, MULT=47, DIVIDE=48, PLUS=49, 
		PLUSPLUS=50, SUB=51, SUBSUB=52, MARK=53, DOUBLQOUT=54, HASH=55, ARROW=56, 
		QUISTION=57, NUMBER=58, FLOATNUM=59, CHARACTER=60, WS=61, ID=62, STR=63, 
		SYBOLS=64;
	public static final int
		RULE_program = 0, RULE_imports = 1, RULE_thingsToImport = 2, RULE_directive = 3, 
		RULE_sittings = 4, RULE_structure = 5, RULE_body = 6, RULE_properties = 7, 
		RULE_dataType = 8, RULE_value = 9, RULE_functions = 10, RULE_arrowFunction = 11, 
		RULE_normalFunction = 12, RULE_parameters = 13, RULE_arrayorobject = 14, 
		RULE_functionCall = 15, RULE_controleStmts = 16, RULE_condition = 17, 
		RULE_elseIfStmts = 18, RULE_elseStmt = 19, RULE_varDec = 20, RULE_exp = 21, 
		RULE_loops = 22, RULE_foreachStmt = 23, RULE_forStmt = 24;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "imports", "thingsToImport", "directive", "sittings", "structure", 
			"body", "properties", "dataType", "value", "functions", "arrowFunction", 
			"normalFunction", "parameters", "arrayorobject", "functionCall", "controleStmts", 
			"condition", "elseIfStmts", "elseStmt", "varDec", "exp", "loops", "foreachStmt", 
			"forStmt"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'import'", "'from'", "'export'", "'class'", "'this'", "'new'", 
			"'char'", "'string'", "'int'", "'float'", "'array'", "'any'", "'for'", 
			"'foreach'", "'of'", "'while'", "'do'", "'if'", "'elseif'", "'else'", 
			"'true'", "'false'", "'let'", "'var'", "'const'", "'number'", "'null'", 
			"'boolean'", "'{'", "'}'", "'('", "')'", "'['", "']'", "':'", "';'", 
			"','", "'@'", "'.'", "'='", "'<'", "'>'", "'<='", "'>='", "'=='", "'!='", 
			"'*'", "'/'", "'+'", "'++'", "'-'", "'--'", "'!'", "'\"'", "'#'", "'=>'", 
			"'?'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "IMPORT", "FROM", "EXPORT", "CLASS", "THIS", "NEW", "CHAR", "STRING", 
			"INT", "FLOAT", "ARRAY", "ANY", "FOR", "FOREACH", "OF", "WHILE", "DO", 
			"IF", "ELSE_IF", "ELSE", "TRUE", "FALSE", "LET", "VAR", "CONST", "NUM", 
			"NULL", "BOOLEAN", "OPENCURLY", "CLOSECURLY", "OPENBRACKET", "CLOSEBRACKET", 
			"OPENSQUARE", "CLOSESQUARE", "COLON", "CEMMI", "COMMA", "AT", "DOT", 
			"ASSIGN", "LEFTARROW", "RIGHTARROW", "LEFTARROWOREQUAL", "RIGHTARROWOREQUAL", 
			"EQUAL", "NOTEQUAL", "MULT", "DIVIDE", "PLUS", "PLUSPLUS", "SUB", "SUBSUB", 
			"MARK", "DOUBLQOUT", "HASH", "ARROW", "QUISTION", "NUMBER", "FLOATNUM", 
			"CHARACTER", "WS", "ID", "STR", "SYBOLS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "AngularParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public AngularParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public DirectiveContext directive() {
			return getRuleContext(DirectiveContext.class,0);
		}
		public StructureContext structure() {
			return getRuleContext(StructureContext.class,0);
		}
		public TerminalNode EOF() { return getToken(AngularParser.EOF, 0); }
		public List<ImportsContext> imports() {
			return getRuleContexts(ImportsContext.class);
		}
		public ImportsContext imports(int i) {
			return getRuleContext(ImportsContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngularParserVisitor ) return ((AngularParserVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(51); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(50);
				imports();
				}
				}
				setState(53); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==IMPORT );
			setState(55);
			directive();
			setState(56);
			structure();
			setState(57);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ImportsContext extends ParserRuleContext {
		public TerminalNode IMPORT() { return getToken(AngularParser.IMPORT, 0); }
		public TerminalNode OPENCURLY() { return getToken(AngularParser.OPENCURLY, 0); }
		public ThingsToImportContext thingsToImport() {
			return getRuleContext(ThingsToImportContext.class,0);
		}
		public TerminalNode CLOSECURLY() { return getToken(AngularParser.CLOSECURLY, 0); }
		public TerminalNode FROM() { return getToken(AngularParser.FROM, 0); }
		public TerminalNode STR() { return getToken(AngularParser.STR, 0); }
		public TerminalNode CEMMI() { return getToken(AngularParser.CEMMI, 0); }
		public ImportsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_imports; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).enterImports(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).exitImports(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngularParserVisitor ) return ((AngularParserVisitor<? extends T>)visitor).visitImports(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ImportsContext imports() throws RecognitionException {
		ImportsContext _localctx = new ImportsContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_imports);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(59);
			match(IMPORT);
			setState(60);
			match(OPENCURLY);
			setState(61);
			thingsToImport();
			setState(62);
			match(CLOSECURLY);
			setState(63);
			match(FROM);
			setState(64);
			match(STR);
			setState(66);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==CEMMI) {
				{
				setState(65);
				match(CEMMI);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ThingsToImportContext extends ParserRuleContext {
		public List<TerminalNode> ID() { return getTokens(AngularParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(AngularParser.ID, i);
		}
		public List<TerminalNode> COMMA() { return getTokens(AngularParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(AngularParser.COMMA, i);
		}
		public ThingsToImportContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_thingsToImport; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).enterThingsToImport(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).exitThingsToImport(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngularParserVisitor ) return ((AngularParserVisitor<? extends T>)visitor).visitThingsToImport(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ThingsToImportContext thingsToImport() throws RecognitionException {
		ThingsToImportContext _localctx = new ThingsToImportContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_thingsToImport);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(68);
			match(ID);
			setState(73);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(69);
				match(COMMA);
				setState(70);
				match(ID);
				}
				}
				setState(75);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DirectiveContext extends ParserRuleContext {
		public TerminalNode AT() { return getToken(AngularParser.AT, 0); }
		public TerminalNode ID() { return getToken(AngularParser.ID, 0); }
		public TerminalNode OPENBRACKET() { return getToken(AngularParser.OPENBRACKET, 0); }
		public TerminalNode OPENCURLY() { return getToken(AngularParser.OPENCURLY, 0); }
		public SittingsContext sittings() {
			return getRuleContext(SittingsContext.class,0);
		}
		public TerminalNode CLOSECURLY() { return getToken(AngularParser.CLOSECURLY, 0); }
		public TerminalNode CLOSEBRACKET() { return getToken(AngularParser.CLOSEBRACKET, 0); }
		public DirectiveContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_directive; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).enterDirective(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).exitDirective(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngularParserVisitor ) return ((AngularParserVisitor<? extends T>)visitor).visitDirective(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DirectiveContext directive() throws RecognitionException {
		DirectiveContext _localctx = new DirectiveContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_directive);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(76);
			match(AT);
			setState(77);
			match(ID);
			setState(78);
			match(OPENBRACKET);
			setState(79);
			match(OPENCURLY);
			setState(80);
			sittings();
			setState(81);
			match(CLOSECURLY);
			setState(82);
			match(CLOSEBRACKET);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SittingsContext extends ParserRuleContext {
		public List<TerminalNode> COMMA() { return getTokens(AngularParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(AngularParser.COMMA, i);
		}
		public List<TerminalNode> ID() { return getTokens(AngularParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(AngularParser.ID, i);
		}
		public List<TerminalNode> COLON() { return getTokens(AngularParser.COLON); }
		public TerminalNode COLON(int i) {
			return getToken(AngularParser.COLON, i);
		}
		public List<TerminalNode> STR() { return getTokens(AngularParser.STR); }
		public TerminalNode STR(int i) {
			return getToken(AngularParser.STR, i);
		}
		public List<TerminalNode> OPENSQUARE() { return getTokens(AngularParser.OPENSQUARE); }
		public TerminalNode OPENSQUARE(int i) {
			return getToken(AngularParser.OPENSQUARE, i);
		}
		public List<ThingsToImportContext> thingsToImport() {
			return getRuleContexts(ThingsToImportContext.class);
		}
		public ThingsToImportContext thingsToImport(int i) {
			return getRuleContext(ThingsToImportContext.class,i);
		}
		public List<TerminalNode> CLOSESQUARE() { return getTokens(AngularParser.CLOSESQUARE); }
		public TerminalNode CLOSESQUARE(int i) {
			return getToken(AngularParser.CLOSESQUARE, i);
		}
		public SittingsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sittings; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).enterSittings(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).exitSittings(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngularParserVisitor ) return ((AngularParserVisitor<? extends T>)visitor).visitSittings(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SittingsContext sittings() throws RecognitionException {
		SittingsContext _localctx = new SittingsContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_sittings);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(93);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				{
				{
				setState(84);
				match(ID);
				setState(85);
				match(COLON);
				setState(86);
				match(STR);
				}
				}
				break;
			case 2:
				{
				{
				setState(87);
				match(ID);
				setState(88);
				match(COLON);
				setState(89);
				match(OPENSQUARE);
				setState(90);
				thingsToImport();
				setState(91);
				match(CLOSESQUARE);
				}
				}
				break;
			}
			setState(109);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(95);
				match(COMMA);
				setState(105);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
				case 1:
					{
					{
					setState(96);
					match(ID);
					setState(97);
					match(COLON);
					setState(98);
					match(STR);
					}
					}
					break;
				case 2:
					{
					{
					setState(99);
					match(ID);
					setState(100);
					match(COLON);
					setState(101);
					match(OPENSQUARE);
					setState(102);
					thingsToImport();
					setState(103);
					match(CLOSESQUARE);
					}
					}
					break;
				}
				}
				}
				setState(111);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StructureContext extends ParserRuleContext {
		public TerminalNode EXPORT() { return getToken(AngularParser.EXPORT, 0); }
		public TerminalNode CLASS() { return getToken(AngularParser.CLASS, 0); }
		public TerminalNode ID() { return getToken(AngularParser.ID, 0); }
		public TerminalNode OPENCURLY() { return getToken(AngularParser.OPENCURLY, 0); }
		public TerminalNode CLOSECURLY() { return getToken(AngularParser.CLOSECURLY, 0); }
		public List<BodyContext> body() {
			return getRuleContexts(BodyContext.class);
		}
		public BodyContext body(int i) {
			return getRuleContext(BodyContext.class,i);
		}
		public StructureContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_structure; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).enterStructure(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).exitStructure(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngularParserVisitor ) return ((AngularParserVisitor<? extends T>)visitor).visitStructure(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StructureContext structure() throws RecognitionException {
		StructureContext _localctx = new StructureContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_structure);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(112);
			match(EXPORT);
			setState(113);
			match(CLASS);
			setState(114);
			match(ID);
			setState(115);
			match(OPENCURLY);
			setState(119);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 4899916671663497248L) != 0)) {
				{
				{
				setState(116);
				body();
				}
				}
				setState(121);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(122);
			match(CLOSECURLY);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BodyContext extends ParserRuleContext {
		public PropertiesContext properties() {
			return getRuleContext(PropertiesContext.class,0);
		}
		public FunctionsContext functions() {
			return getRuleContext(FunctionsContext.class,0);
		}
		public ControleStmtsContext controleStmts() {
			return getRuleContext(ControleStmtsContext.class,0);
		}
		public LoopsContext loops() {
			return getRuleContext(LoopsContext.class,0);
		}
		public VarDecContext varDec() {
			return getRuleContext(VarDecContext.class,0);
		}
		public ExpContext exp() {
			return getRuleContext(ExpContext.class,0);
		}
		public BodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_body; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).enterBody(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).exitBody(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngularParserVisitor ) return ((AngularParserVisitor<? extends T>)visitor).visitBody(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BodyContext body() throws RecognitionException {
		BodyContext _localctx = new BodyContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_body);
		try {
			setState(130);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(124);
				properties();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(125);
				functions();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(126);
				controleStmts();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(127);
				loops();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(128);
				varDec();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(129);
				exp(0);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PropertiesContext extends ParserRuleContext {
		public List<TerminalNode> ID() { return getTokens(AngularParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(AngularParser.ID, i);
		}
		public TerminalNode COLON() { return getToken(AngularParser.COLON, 0); }
		public DataTypeContext dataType() {
			return getRuleContext(DataTypeContext.class,0);
		}
		public TerminalNode THIS() { return getToken(AngularParser.THIS, 0); }
		public TerminalNode DOT() { return getToken(AngularParser.DOT, 0); }
		public TerminalNode ASSIGN() { return getToken(AngularParser.ASSIGN, 0); }
		public ValueContext value() {
			return getRuleContext(ValueContext.class,0);
		}
		public TerminalNode CEMMI() { return getToken(AngularParser.CEMMI, 0); }
		public TerminalNode AT() { return getToken(AngularParser.AT, 0); }
		public List<TerminalNode> OPENBRACKET() { return getTokens(AngularParser.OPENBRACKET); }
		public TerminalNode OPENBRACKET(int i) {
			return getToken(AngularParser.OPENBRACKET, i);
		}
		public List<TerminalNode> CLOSEBRACKET() { return getTokens(AngularParser.CLOSEBRACKET); }
		public TerminalNode CLOSEBRACKET(int i) {
			return getToken(AngularParser.CLOSEBRACKET, i);
		}
		public TerminalNode NEW() { return getToken(AngularParser.NEW, 0); }
		public TerminalNode LEFTARROW() { return getToken(AngularParser.LEFTARROW, 0); }
		public TerminalNode RIGHTARROW() { return getToken(AngularParser.RIGHTARROW, 0); }
		public ArrayorobjectContext arrayorobject() {
			return getRuleContext(ArrayorobjectContext.class,0);
		}
		public TerminalNode OPENSQUARE() { return getToken(AngularParser.OPENSQUARE, 0); }
		public TerminalNode CLOSESQUARE() { return getToken(AngularParser.CLOSESQUARE, 0); }
		public PropertiesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_properties; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).enterProperties(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).exitProperties(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngularParserVisitor ) return ((AngularParserVisitor<? extends T>)visitor).visitProperties(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PropertiesContext properties() throws RecognitionException {
		PropertiesContext _localctx = new PropertiesContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_properties);
		int _la;
		try {
			setState(198);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,18,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				{
				setState(134);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==THIS) {
					{
					setState(132);
					match(THIS);
					setState(133);
					match(DOT);
					}
				}

				setState(136);
				match(ID);
				setState(137);
				match(COLON);
				setState(138);
				dataType();
				setState(141);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==ASSIGN) {
					{
					setState(139);
					match(ASSIGN);
					setState(140);
					value();
					}
				}

				setState(144);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==CEMMI) {
					{
					setState(143);
					match(CEMMI);
					}
				}

				}
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				{
				setState(146);
				match(AT);
				setState(147);
				match(ID);
				setState(148);
				match(OPENBRACKET);
				setState(149);
				match(CLOSEBRACKET);
				setState(150);
				match(ID);
				setState(151);
				match(ASSIGN);
				setState(152);
				match(NEW);
				setState(153);
				match(ID);
				setState(154);
				match(LEFTARROW);
				setState(155);
				dataType();
				setState(156);
				match(RIGHTARROW);
				setState(157);
				match(OPENBRACKET);
				setState(158);
				match(CLOSEBRACKET);
				setState(160);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==CEMMI) {
					{
					setState(159);
					match(CEMMI);
					}
				}

				}
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				{
				setState(162);
				match(AT);
				setState(163);
				match(ID);
				setState(164);
				match(OPENBRACKET);
				setState(165);
				match(CLOSEBRACKET);
				setState(166);
				match(ID);
				setState(167);
				match(COLON);
				setState(168);
				dataType();
				setState(170);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==CEMMI) {
					{
					setState(169);
					match(CEMMI);
					}
				}

				}
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				{
				setState(174);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==THIS) {
					{
					setState(172);
					match(THIS);
					setState(173);
					match(DOT);
					}
				}

				setState(176);
				match(ID);
				setState(177);
				match(COLON);
				setState(178);
				dataType();
				setState(181);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==OPENSQUARE) {
					{
					setState(179);
					match(OPENSQUARE);
					setState(180);
					match(CLOSESQUARE);
					}
				}

				setState(183);
				match(ASSIGN);
				setState(184);
				arrayorobject();
				setState(186);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==CEMMI) {
					{
					setState(185);
					match(CEMMI);
					}
				}

				}
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				{
				setState(190);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==THIS) {
					{
					setState(188);
					match(THIS);
					setState(189);
					match(DOT);
					}
				}

				setState(192);
				match(ID);
				setState(193);
				match(ASSIGN);
				setState(194);
				value();
				setState(196);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==CEMMI) {
					{
					setState(195);
					match(CEMMI);
					}
				}

				}
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
